<resources>
    <string name="app_name">BachelorThesis</string>
    <string name="guten_morgen">Guten Morgen</string>
    <string name="mahlzeit_hinzuf_gen">Mahlzeit hinzufügen</string>
    <string name="sport_hinzuf_gen">Sport hinzufügen</string>
    <string name="help">help</string>
    <string name="information_text">Allgemeine Information, zur Nutzung der App:
        \n\nMorgens: Bewerten Sie jeden Morgen nach dem Aufstehen Ihren Schlaf. Haben Sie genug geschlafen?
        \n\nEssen: Bewerten Sie nach jeder Mahlzeit Ihr Essen. Wie fühlen Sie sich nach der Mahlzeit?
        \n\nSport: Tragen Sie nach jeder Sporteinheit, die Uhrzeiten ein. Beantworten Sie zusätzlich, ob die Sporteinheit spontan oder geplant stattgefunden hat. </string>
    <string name="weiter">Weiter</string>
    <string name="fertig">fertig</string>
    <string name="gibt_es_feste_zeiten_zu_denen_sie_sport_machen_wenn_ja_welche">Gibt es feste Zeiten zu denen Sie Sport machen, wenn ja welche?</string>
    <string name="donnerstag">Donnerstag</string>
    <string name="sonntag">Sonntag</string>
    <string name="hh_mm">hh:mm</string>
    <string name="montag">Montag</string>
    <string name="freitag">Freitag</string>
    <string name="samstag">Samstag</string>
    <string name="mittwoch">Mittwoch</string>
    <string name="dienstag">Dienstag</string>
    <string name="beantworten_sie_die_nachfolgenden_fragen_ausf_hrlich_diese_k_nnen_nur_einmal_beantwortet_und_nicht_mehr_bearbeitet_werden">Beantworten Sie die nachfolgenden Fragen ausführlich. Diese können nur einmal beantwortet und nicht mehr bearbeitet werden.</string>
    <string name="wie_zufrieden_waren_sie_mit_dieser_mahlzeit">Wie zufrieden waren Sie mit dieser Mahlzeit?</string>
    <string name="start">Start:</string>
    <string name="ende">Ende:</string>
    <string name="geplant">Geplant?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="wie_viele_sportarten_machen_sie">Wie viele Sportarten machen Sie?</string>
    <string name="anzahl">Anzahl</string>
    <string name="sehr_strukturiert">sehr strukturiert</string>
    <string name="sehr_unstrukturiert">sehr unstrukturiert</string>
    <string name="wie_strukturiert_w_rden_sie_ihren_tagesablauf_beschreiben">Wie strukturiert würden Sie Ihren Tagesablauf beschreiben?</string>
    <string name="abends">Abends</string>
    <string name="mittags">Mittags</string>
    <string name="morgens">Morgens</string>
    <string name="wann_machst_du_in_der_regel_sport">Wann machst du in der Regel Sport? \n(Mehrere auswählbar)</string>
    <string name="csv_hochladen">CSV hochladen</string>
    <string name="vielleicht">vielleicht</string>
    <string name="haben_sie_heute_vor_sport_nzu_machen">Haben Sie heute vor Sport  zu machen?</string>
    <string name="wie_oft_gehen_sie_durchschnittlich_in_der_woche_zum_sport">Wie oft gehen Sie durchschnittlich in der Woche zum Sport? \n(Jeden 2. Tag = 3.5)</string>
    <string name="wie_alt_sind_sie">Wie alt sind Sie?</string>
    <string name="alter">Alter</string>
    <string name="plz">PLZ</string>
    <string name="wie_regelm_ig_machen_sie_sport">Wie regelmäßig machen Sie Sport?</string>
    <string name="sehr_regelm_ig">sehr regelmäßig</string>
    <string name="wie_lautet_die_postleitzahl_f_r_den_ort_an_dem_sie_sich_die_meiste_zeit_befinden">Wie lautet die Postleitzahl Ihres Wohnortes?</string>
    <string name="sehr_unregelm_ig">sehr unregelmäßig</string>
    <string name="bachelorarbeit_von_alexander_ruhl">Bachelorarbeit von Alexander Ruhl</string>
    <string name="guten_morgen_nwie_gut_haben_sie_geschlafen">Guten Morgen, wie gut haben Sie geschlafen?</string>
    <string name="app_starten">App starten</string>
    <string name="deletebutton">deleteButton</string>
    <string name="_01_01_2020">01.01.2020</string>
    <string name="datum">Datum:</string>
</resources>